css polishing and small html changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
         <main class="main-page">
 
-            <div class="content">
+            <div class="content choices">
                 <form action="{{url_for('mp3_option_button')}}" method="post">
                     <button id="MP3-Button" name="MP3-Button" value="MP3-Option">MP3 Option</button>
                 </form>
