--- a/templates/mp3-metadata-editor.html
+++ b/templates/mp3-metadata-editor.html
@@ -25,19 +25,19 @@
                     <input type="text" id="album" name="album" placeholder="Album"><br>
 
                     <label for="album_artist">Album Artist:</label><br>
-                    <input for="text" id="album_artist" name="album_artist" placeholder="Album Artist"><br>
+                    <input type="text" id="album_artist" name="album_artist" placeholder="Album Artist"><br>
 
                     <label for="title">Title:</label><br>
-                    <input for="text" id="title" name="title" placeholder="Title"><br>
+                    <input type="text" id="title" name="title" placeholder="Title"><br>
 
                     <label for="track_number">Track Number:</label><br>
-                    <input for="text" id="track_number" name="track_number" placeholder="Track Number"><br>
+                    <input type="text" id="track_number" name="track_number" placeholder="Track Number"><br>
 
                     <label for="genre">Genre:</label><br>
-                    <input for="text" id="genre" name="genre" placeholder="Genre"><br>
+                    <input type="text" id="genre" name="genre" placeholder="Genre"><br>
 
                     <label for="year">Year:</label><br>
-                    <input for="text" id="year" name="year" placeholder="Year"><br>
+                    <input type="text" id="year" name="year" placeholder="Year"><br>
 
                     <input type="file" id="cover_art_file" name="cover_art_file">
 
