--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body, html {
-    margin: 0;
-    font-family: sans-serif;
+    margin: 0.5em;
     background-color: #b1dfe2;
+}
+
+* {
+    font-family: 'Roboto' , sans-serif;
 }
 
 .main-page {
@@ -14,10 +19,14 @@ h1 {
     justify-content: center;
 }
 
+
+
+
 #MP3-Button , #MP4-Button {
     width: 200px;
     margin: 10px;
     padding: 10px;
+    border-radius: 0.5rem;
 }
 
 #MP3-Button {
@@ -25,10 +34,37 @@ h1 {
     float: left;
 }
 
+#MP3-Button:hover {
+    background-color: #cccb83;
+    cursor: pointer;
+}
+
+#MP3-Button:active {
+    background-color: #eeedcc;
+    cursor: pointer;
+}
+
 #MP4-Button {
-    background-color: #8be7a2;
+    background-color: #a0ecb3;
     float: right;
 }
+
+#MP4-Button:hover {
+    background-color: #8bc59a;
+    cursor: pointer;
+}
+
+#MP4-Button:active {
+    background-color: #c9eed2;
+    cursor: pointer;
+}
+
+#youtube_link {
+    align-self: center;
+}
+
+
+
 
 input[type="text"] {
     display: inline-block;
@@ -41,24 +77,60 @@ input[type="text"] {
     box-sizing: border-box;
 }
 
+input[type=submit] {
+    align-self: center;
+    background-color: #e9e9e9;
+    width: 40%;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 0.5rem;
+}
+
+input[type=submit]:hover {
+    background-color: #cacaca;
+    cursor: pointer;
+}
+
+input[type=submit]:active {
+    background-color: #f1f1f1;
+}
+
 .content  {
     display: flex;
+    align-items: center;
     justify-content: center;
     width: 600px;
     grid-column-start: 2;
     grid-column-end: 3;
 }
 
+.choices {
+    flex-direction: row;
+}
+
+.mp3-form-content {
+    flex-direction: column;
+}
+
+
+
 .mp3-form {
     width: 100%;
     display: flex;
-    justify-content: right;
     flex-direction: column;
 }
 
 .mp4-form {
     width: 100%;
     display: flex;
-    justify-content: right;
     flex-direction: column;
 }
+
+.trimmer-form {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
