--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,10 @@
             {% include 'mp3-metadata-editor.html' %}
         {% endif %}
 
+        {%if player_button_open %}
+            {% include 'mp3-button-play.html' %} 
+        {% endif %}
+        
         <footer>
 
         </footer>
