--- a/static/css/mp3-player-style.css
+++ b/static/css/mp3-player-style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
+* , input[type=file]::file-selector-button {
+    font-family: 'Roboto' , sans-serif;
+}
+
+
 body {
     background-color: lightgreen;
    
