--- a/templates/mp4_trimmer.html
+++ b/templates/mp4_trimmer.html
@@ -15,7 +15,7 @@
         </header>
 
         <main>
-            <form class="trimmer-form" action="{{url_for('trimmer_editor')}}" method="post">
+            <form class="trimmer-form" action="{{url_for('mp4_trimmer_editor')}}" method="post">
                 <label for="start-time">Trim seconds from the start: </label><br>
                 <input type="text" id="start-time" name="start-time" placeholder="Trim seconds from the start"><br>
 
