download function for mp3 file completed

--- a/templates/mp3-button-play.html
+++ b/templates/mp3-button-play.html
@@ -10,5 +10,9 @@
     <form action="{{url_for('mp3_player')}}" method="post">
         <button id="MP3-Player" name="MP3-Player" value="MP3-Player">Play MP3 Now</button>
     </form>
+
+    <form action="{{url_for('download_file')}}" method="post">
+        <button id="mp3-download-button">Download Music File</button>
+    </form>
 </body>
 </html>
