download function for mp4 files added

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,10 @@
         {%if player_button_open %}
             {% include 'mp3-button-play.html' %} 
         {% endif %}
+
+        {%if mp4_download_button_open %} 
+            {%include 'mp4-download-button.html' %} 
+        {% endif %}
         
         <footer>
 
