adding metadata not required now, fixed directory bug download mp3, added icon

--- a/templates/mp3-metadata-editor.html
+++ b/templates/mp3-metadata-editor.html
@@ -19,7 +19,7 @@
             <div class="content">
                 <form class="mp3-metadata-editor" action="{{url_for('mp3_metadata_editor')}}" method="post" enctype="multipart/form-data">
                     <label for="artist">Artist:</label><br>
-                    <input type="text" id="artist" name="artist" placeholder="Artist" required><br>
+                    <input type="text" id="artist" name="artist" placeholder="Artist"><br>
 
                     <label for="album">Album:</label><br>
                     <input type="text" id="album" name="album" placeholder="Album"><br>
@@ -28,7 +28,7 @@
                     <input type="text" id="album_artist" name="album_artist" placeholder="Album Artist"><br>
 
                     <label for="title">Title:</label><br>
-                    <input type="text" id="title" name="title" placeholder="Title" required><br>
+                    <input type="text" id="title" name="title" placeholder="Title"><br>
 
                     <label for="track_number">Track Number:</label><br>
                     <input type="text" id="track_number" name="track_number" placeholder="Track Number"><br>
