mp4 player with drag-drop function + file choise

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
             {% include 'mp3-button-play.html' %} 
         {% endif %}
 
-        {%if mp4_download_button_open %} 
+        {%if mp4_download_button_open %} <!--it has also the mp4 player button-->
             {%include 'mp4-download-button.html' %} 
         {% endif %}
         
