zip functionality added for mp3-mp4 playlists to download as one file

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
             {% include 'mp3-metadata-editor.html' %}
         {% endif %}
 
-        {%if player_button_open %}
+        {%if player_button_open %}  <!--It has also the mp3 player button-->
             {% include 'mp3-button-play.html' %} 
         {% endif %}
 
