added mp3 playlist function to mp3 player

--- a/templates/mp3-player-One.html
+++ b/templates/mp3-player-One.html
@@ -14,7 +14,7 @@
         <div class="player">
 
             <div>
-                <input type="file" id="input-file" accept=".mp3">
+                <input type="file" id="input-file" multiple accept=".mp3">
             </div>
             <!-- Define the section for displaying details -->
             <div class="details">
