--- a/templates/mp3-metadata-editor.html
+++ b/templates/mp3-metadata-editor.html
@@ -19,25 +19,25 @@
             <div class="content">
                 <form class="mp3-metadata-editor" action="{{url_for('mp3_metadata_editor')}}" method="post" enctype="multipart/form-data">
                     <label for="artist">Artist:</label><br>
-                    <input type="text" id="artist" name="artist" placeholder="Artist"><br>
+                    <input type="text" id="artist" class="metadata-input" name="artist" placeholder="Artist"><br>
 
                     <label for="album">Album:</label><br>
-                    <input type="text" id="album" name="album" placeholder="Album"><br>
+                    <input type="text" id="album" class="metadata-input" name="album" placeholder="Album"><br>
 
                     <label for="album_artist">Album Artist:</label><br>
-                    <input type="text" id="album_artist" name="album_artist" placeholder="Album Artist"><br>
+                    <input type="text" id="album_artist" class="metadata-input" name="album_artist" placeholder="Album Artist"><br>
 
                     <label for="title">Title:</label><br>
-                    <input type="text" id="title" name="title" placeholder="Title"><br>
+                    <input type="text" id="title" class="metadata-input" name="title" placeholder="Title"><br>
 
                     <label for="track_number">Track Number:</label><br>
-                    <input type="text" id="track_number" name="track_number" placeholder="Track Number"><br>
+                    <input type="text" id="track_number" class="metadata-input" name="track_number" placeholder="Track Number"><br>
 
                     <label for="genre">Genre:</label><br>
-                    <input type="text" id="genre" name="genre" placeholder="Genre"><br>
+                    <input type="text" id="genre" class="metadata-input" name="genre" placeholder="Genre"><br>
 
                     <label for="year">Year:</label><br>
-                    <input type="text" id="year" name="year" placeholder="Year"><br>
+                    <input type="text" id="year" class="metadata-input" name="year" placeholder="Year"><br>
 
                     <input type="file" id="cover_art_file" name="cover_art_file">
 
