--- a/templates/mp3-button-play.html
+++ b/templates/mp3-button-play.html
@@ -7,12 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="{{url_for('mp3_player')}}" method="post">
-        <button id="MP3-Player" name="MP3-Player" value="MP3-Player">Play MP3 Now</button>
-    </form>
-
-    <form action="{{url_for('download_file')}}" method="post">
-        <button id="mp3-download-button">Download Music File</button>
-    </form>
+    <main class="main-page">
+        <div class="content player-and-download">
+            <form action="{{url_for('mp3_player')}}" method="post">
+                <button id="MP3-Player" name="MP3-Player" value="MP3-Player">Play MP3 Now</button>
+            </form>
+            <form action="{{url_for('download_file')}}" method="post">
+                <button id="mp3-download-button">Download Music File</button>
+            </form>
+        </div>
+    </main>
 </body>
 </html>
