--- a/templates/mp4-download-button.html
+++ b/templates/mp4-download-button.html
@@ -8,12 +8,15 @@
     </head>
 
     <body>
-        <form action="{{url_for('download_mp4_file')}}" method="post">
-            <button id="mp4-download-button">Download Video File</button>
-        </form>
-
-        <form action="{{url_for('mp4_player')}}" method="post">
-            <button id="mp4-player-button">Play MP4 Now</button>
-        </form>
+        <main class="main-page">
+            <div class="content player-and-download">
+                <form action="{{url_for('download_mp4_file')}}" method="post">
+                    <button id="mp4-download-button">Download Video File</button>
+                </form>
+                <form action="{{url_for('mp4_player')}}" method="post">
+                    <button id="mp4-player-button">Play MP4 Now</button>
+                </form>
+            </div>
+        </main>
     </body>
 </html>
